make app working

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>notifications</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+        <div>
+    		API Key: <input id="api-key" type="text" style="width:300px">
+    		<input id="submit" type="button" value="Submit">
+		</div>
+		<div id="lastUpdate"></div>
+		<div id="messages"></div>
+
+        <script src="script.js"></script>
+    </body>
+</html>
